--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,6 @@ Description: Takes sample information in the form of the fraction of mutations
     mutational profile.
 License: GPL (>= 2)
 Imports:
-    reshape2,
     BSgenome,
     Biostrings,
     GenomeInfoDb,
@@ -20,7 +19,8 @@ Imports:
     utils,
     GenomicRanges,
     BSgenome.Hsapiens.UCSC.hg19,
-    methods
+    methods,
+    data.table
 Suggests:
     VariantAnnotation,
 LazyData: yes
