--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,12 @@ export(plotSignatures)
 export(plotTumor)
 export(vcf.to.sigs.input)
 export(whichSignatures)
+importFrom(data.table,":=")
+importFrom(data.table,.BY)
+importFrom(data.table,.EACHI)
+importFrom(data.table,.GRP)
+importFrom(data.table,.I)
+importFrom(data.table,.N)
+importFrom(data.table,.NGRP)
+importFrom(data.table,.SD)
+importFrom(data.table,data.table)
