--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Suggests:
 LazyData: yes
 URL: https://github.com/raerose01/deconstructSigs
 BugReports: https://github.com/raerose01/deconstructSigs/issues
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Encoding: UTF-8
 Depends: 
